# phi4-ft

./: README.md  config.sh  config_lr0_0004-ep3-bs128-wd0_01_warmup300_lora.yaml  config_lr0_0004-ep3-bs128-wd0_01_warmup300_speech_lora.yaml  finetune_speech_adapters.py  main.py  pyproject.toml  sample_finetune_speech.py  sample_hf.py
speech-lora/: README.md
vision-lora/: README.md
